tweak team scoreboard summary: - fix css to align it correctly and make it look good - greatly reduce the putTeamRow function, don't query or process   information we won't need this closes #1312241
git-svn-id: https://secure.a-eskwadraat.nl/svn/domjudge/trunk@897 caf94f87-7bd6-0310-88dc-dee8202e2269

--- a/www/style.css
+++ b/www/style.css
@@ -61,7 +61,7 @@ a:active          { color: red;    }
 .scoreboard td		{ font-size: small;					}
 .scoreboard tr		{ border-bottom: 1px solid silver;	}
 .scoreboard td, .scoreboard th { border-right:  1px solid black;	}
-#scoreheader		{ border-bottom: 2px solid black; font-variant: small-caps; }
+.scoreheader		{ border-bottom: 2px solid black; font-variant: small-caps; }
 .score_correct		{ background: #33FF66;	}
 .score_incorrect	{ background: #FF6666;	}
 .score_neutral		{ background: white;	}
@@ -84,6 +84,8 @@ a:active          { color: red;    }
 	color: gray; font-size: x-small;
 	position: absolute; right: 1ex; margin-top: 1em;
 }
+
+#teamscoresummary {	position: absolute; right: 1ex;	}
 
 /* backgrounds for categories, define as you see fit */
 .category1 { background: white; }
